@@ -3,6 +3,7 @@ documents those changes that are of interest to users and administrators.
 
 * Changes in Slurm 17.11.0rc3
 ==============================
+ -- Fix extern step to wait until launched before allowing job to start.
 
 * Changes in Slurm 17.11.0rc2
 ==============================
